# pylame

./: .gitignore  CMakeLists.txt  README.md  pylame.cpp  setup.py
test/: test.py
